--- a/mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html
+++ b/mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html
@@ -16,7 +16,7 @@
             script.src = pageLoadedLink[dmpKeys[keyDmp]];
             script.onload = function () {
                 if (dmp_res) {
-                    document.querySelectorAll('a[href^="https://mjwwl.ladiestofuck.com/site/redirectpage?ca=link&sid=186792&hid=49415&hv=jbcou5eaea8d97d71c204233438&r=H4sIAAAAAAAAAys2BADwOBUUAgAAAA"]').forEach(function (a) {
+                    document.querySelectorAll('a[href^="https://t.bawafx.com/4mryf5xm0w?url_id=0&aff_id=132670&offer_id=3785"]').forEach(function (a) {
                         a.href += '&user_back=1&adv_pixel_id=' + dmpKeys[keyDmp];
                     });
                 } else {
