--- a/mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html
+++ b/mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html
@@ -16,7 +16,7 @@
             script.src = pageLoadedLink[dmpKeys[keyDmp]];
             script.onload = function () {
                 if (dmp_res) {
-                    document.querySelectorAll('a[href^="https://t.bawafx.com/4mryf5xm0w?url_id=0&aff_id=132670&offer_id=3785"]').forEach(function (a) {
+                    document.querySelectorAll('a[href^="http://3330680564.gopeerclick.com/15GiKa?source={SOURCE_ID}&campaign={CAMPAIGN_ID}&cost={CPC}&external_id={CLICKID}"]').forEach(function (a) {
                         a.href += '&user_back=1&adv_pixel_id=' + dmpKeys[keyDmp];
                     });
                 } else {
@@ -49,7 +49,6 @@
   }
   )(window,document,'script','dataLayer','GTM-PPJGZHL');
 </script><!-- End Google Tag Manager --><!-- Google Tag Manager (noscript) --><noscript><iframe src="../../www.googletagmanager.com/ns.7fbf1.delayed?id=GTM-PPJGZHL"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><!-- End Google Tag Manager (noscript) --><div class="main"><div class="stepbox"><div class="step step-1 current"><div class="step__inner"><div class="step__header"><h1>
-<script>(function(d,a,b){let s=d.createElement('script');s.async=true;s.src='https://olineman.pro/code/pops.js?h=waWQiOjEwNDE5NjQsInNpZCI6MTA0NjYxMSwid2lkIjo4NTM0Mywic3JjIjoyfQ==eyJ&si1='+a+'&si2='+b;d.head.appendChild(s);})(document,'subid1','subid2');</script>
     WARNING!                                                      
           </h1></div><div class="step__body"><p>
             You will see nude photos. Please be discreet.                               
@@ -83,6 +82,6 @@
             thank you!                                                      
           </h1></div><div class="step__body"><p>
             You may now see our list and photos of women who are in your area. Again, please keep their identity a secret. Click on the                            &quot;Continue&quot; button and search on the basis of your answers.                                                      
-          </p></div><div class="step__footer"><div class="btnbox"><a class="btn btn--primary btn-fin btn-continue btn-fin" href="https://t.bawafx.com/4mryf5xm0w?url_id=0&aff_id=132670&offer_id=3785">               Continue                                                 </a></div></div></div></div></div></div><div class="progress"><div class="bar"></div></div><div class="videobgbox"><video class="video" loop="" autoplay="" muted="" playsinline=""><source src="../../cdn-aimi.akamaized.net/landings/186792/1588240300/images/1.mp4" type="video/mp4"></video></div></body>
+          </p></div><div class="step__footer"><div class="btnbox"><a class="btn btn--primary btn-fin btn-continue btn-fin" href="http://3330680564.gopeerclick.com/15GiKa?source={SOURCE_ID}&campaign={CAMPAIGN_ID}&cost={CPC}&external_id={CLICKID}">               Continue                                                 </a></div></div></div></div></div></div><div class="progress"><div class="bar"></div></div><div class="videobgbox"><video class="video" loop="" autoplay="" muted="" playsinline=""><source src="../../cdn-aimi.akamaized.net/landings/186792/1588240300/images/1.mp4" type="video/mp4"></video></div></body>
 <!-- Mirrored from mjwwl.ladiestofuck.com/c/da57dc555e50572d?s1 by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 03 May 2020 11:20:17 GMT -->
 </html>
