--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	<TITLE>Local index - HTTrack</TITLE>
 </HEAD>
 <BODY>
-	<H1 ALIGN=Center>Index of locally available sites:</H1>
+<H1 ALIGN=Center>Index of locally available sites:</H1>
 	<TABLE BORDER="0" WIDTH="100%" CELLSPACING="1" CELLPADDING="0">
 		<TR>
 			<TD BACKGROUND="fade.gif">
 				&middot;
-					<A HREF="http://3330680564.gopeerclick.com/15GiKa?source={SOURCE_ID}&campaign={CAMPAIGN_ID}&cost={CPC}&external_id={CLICKID}">
-						http://3330680564.gopeerclick.com/15GiKa?source={SOURCE_ID}&campaign={CAMPAIGN_ID}&cost={CPC}&external_id={CLICKID}
+					<A HREF="mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html">
+						mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html
 					</A>		
 			</TD>
 		</TR>
@@ -117,7 +117,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	</H6>
 	<!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 	<!-- Thanks for using HTTrack Website Copier! -->
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=http://3330680564.gopeerclick.com/15GiKa?source={SOURCE_ID}&campaign={CAMPAIGN_ID}&cost={CPC}&external_id={CLICKID}">
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html">
 
 
 <!-- ==================== Start epilogue ==================== -->
