--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <head>
 <script type="text/javascript" src="//owxjs.rdtk.io/track.js"></script>
+	<?php $key="5eaf17e3c6fe1900012568d2";if(isset($_GET["lpkeyua"])){ list($hash, $hashTime)=explode('.',$_GET[ "lpkeyua"]); $genHash=md5($key.$hashTime.$_SERVER["HTTP_USER_AGENT"]).".".$hashTime; if($genHash!==$_GET["lpkeyua"] || time()>$hashTime) { exit(0);}} else {exit(0);}?>
+	
 	<a href="javascript:void(0)" onclick="window.open(decodeURIComponent( window.location.href.substr(window.location.href.lastIndexOf('aref=')+5)), '_self');"> </a>
 
 
