--- a/mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html
+++ b/mjwwl.ladiestofuck.com/c/da57dc555e50572d8ddf.html
@@ -3,7 +3,7 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <a href="javascript:void(0)" onclick="window.open(decodeURIComponent( window.location.href.substr(window.location.href.lastIndexOf('aref=')+5)), '_self');"> </a>
-
+<script async type="text/javascript" src="https://c572e.bemobtracks.com/conversion.js?cid=OPTIONAL&payout=OPTIONAL&txid=OPTIONAL&status=OPTIONAL"></script>
     <meta charset="UTF-8"><base ><meta name="referrer" content="no-referrer"><script>(function() {
     var pageLoaded = function(keyDmp) {
         keyDmp = keyDmp != 'undefined' ? keyDmp : 0;
