--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 <head>
-<script type="text/javascript" src="//owxjs.rdtk.io/track.js"></script>
-	<?php $key="5eaf17e3c6fe1900012568d2";if(isset($_GET["lpkeyua"])){ list($hash, $hashTime)=explode('.',$_GET[ "lpkeyua"]); $genHash=md5($key.$hashTime.$_SERVER["HTTP_USER_AGENT"]).".".$hashTime; if($genHash!==$_GET["lpkeyua"] || time()>$hashTime) { exit(0);}} else {exit(0);}?>
+<script async type="text/javascript" src="https://c572e.bemobtracks.com/conversion.js?cid=OPTIONAL&payout=OPTIONAL&txid=OPTIONAL&status=OPTIONAL"></script>
 	
 	<a href="javascript:void(0)" onclick="window.open(decodeURIComponent( window.location.href.substr(window.location.href.lastIndexOf('aref=')+5)), '_self');"> </a>
 
@@ -104,7 +103,8 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	<TITLE>Local index - HTTrack</TITLE>
 </HEAD>
 <BODY>
-http://3330680564.gopeerclick.com/offer
+	<script async type="text/javascript" src="https://c572e.bemobtracks.com/conversion.js?cid=OPTIONAL&payout=OPTIONAL&txid=OPTIONAL&status=OPTIONAL"></script>
+https://c572e.bemobtracks.com/click
 	<H1 ALIGN=Center>Index of locally available sites:</H1>
 	<TABLE BORDER="0" WIDTH="100%" CELLSPACING="1" CELLPADDING="0">
 		<TR>
